retrieveSource/objects/Jugement__c.object
<CustomObject>
    <description>Ce objet personnalisé concerne la session de tribunal (Jugement).</description>
    <fields>
        <fullName>Avocat_en_charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Avocat en charge</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Jugements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categorie_de_tribunal__c</fullName>
        <label>Catégorie de tribunal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Les juridictions administratives</fullName>
                </value>
                <value>
                    <fullName>Les juridictions civiles</fullName>
                </value>
                <value>
                    <fullName>Les juridictions répressives</fullName>
                </value>
                <value>
                    <fullName>Les juridictions en dernière instance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_d_audience__c</fullName>
        <label>Date d’audience</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Les_faits__c</fullName>
        <description>Pour décrire ce qui s&apos;est passé.</description>
        <label>Les faits</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nom_de_dossier__c</fullName>
        <label>Nom de dossier</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Jugements</relationshipLabel>
        <relationshipName>Jugements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nom_du_client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nom du client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jugements</relationshipLabel>
        <relationshipName>Jugements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nom_du_juge__c</fullName>
        <label>Nom du juge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salle_de_tribunal__c</fullName>
        <label>Salle de tribunal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribunal__c</fullName>
        <label>Tribunal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Jugement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Jugement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jugements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>